fix overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,7 @@
 body {
   padding-top: 70px;
   padding-bottom: 30px;
-  // background-color: #7E5686;
-
+  overflow: hidden;
 }
 
 .theme-dropdown .dropdown-menu {
